🚀 SafeFood v2.0 - Complete Platform Redesign
- ✅ Redesigned 7 pages with modern UI/UX
- ✅ 19+ organized resources with NYC DOH badges
- ✅ Gamified leaderboard with points system
- ✅ Professional certificate system with PDF generation
- ✅ Enhanced dashboard with charts and analytics
- ✅ Improved authentication with 4 user roles
- ✅ Comprehensive documentation and testing guides
- ✅ Full mobile responsiveness (375px-1440px)
- ✅ 6-language support (FR, EN, ES, AR, PT, ZH)
- ✅ Production-ready build passing all checks

Total Changes: 1000+ lines of code, 15+ new features

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -13,6 +13,7 @@
     "academy": "الأكاديمية",
     "dashboard": "لوحة التحكم",
     "healthmap": "خريطة الصحة",
+    "finder": "بحث المطاعم والفنادق",
     "home": "الرئيسية",
     "about": "حول",
     "contact": "اتصل"
@@ -34,7 +35,34 @@
     "assessments": "التقييمات",
     "score": "الدرجة",
     "passed": "نجح",
-    "failed": "فشل"
+    "failed": "فشل",
+    "course1Title": "النظافة الغذائية الأساسية",
+    "course1Desc": "ممارسات سلامة الغذاء الأساسية",
+    "course2Title": "التطهير المتقدم",
+    "course2Desc": "إجراءات التطهير المهنية",
+    "course3Title": "إدارة مسببات الحساسية",
+    "course3Desc": "التعامل الآمن مع حساسية الطعام",
+    "duration": "مدة زمنية",
+    "lessons": "دروس",
+    "modules": "وحدات",
+    "topicsLearned": "مواضيع سيتم تعلمها",
+    "courseProgress": "تقدم الدورة",
+    "reviewAgain": "مراجعة الدورة",
+    "downloadCertificate": "تحميل الشهادة",
+    "selectLesson": "حدد درساً لبدء الدراسة",
+    "markComplete": "علام على أنه مكتمل",
+    "markIncomplete": "علام على أنه غير مكتمل",
+    "quiz": "اختبار",
+    "questionProgress": "سؤال",
+    "questionsInQuiz": "أسئلة في هذا الاختبار",
+    "takeQuiz": "خذ الاختبار",
+    "submitQuiz": "إرسال الاختبار",
+    "quizPassed": "تهانينا!",
+    "quizFailed": "حاول مرة أخرى",
+    "scoreMessage": "درجتك",
+    "lessonCompleted": "تم إكمال الدرس بنجاح",
+    "continueLesson": "الانتقال إلى الدرس التالي",
+    "retryQuiz": "أعد محاولة الاختبار"
   },
   "dashboard": {
     "title": "لوحة تحكم التدقيق الذكية",
@@ -71,7 +99,6 @@
     "details": "تفاصيل المطعم",
     "phone": "الهاتف",
     "address": "العنوان",
-    "cuisine": "المطبخ",
     "lastInspection": "آخر فحص",
     "mapView": "عرض الخريطة",
     "listView": "عرض القائمة",
@@ -93,6 +120,28 @@
     "next": "التالي",
     "previous": "السابق",
     "logout": "تسجيل الخروج",
-    "login": "تسجيل الدخول"
+    "login": "تسجيل الدخول"  },
+  "finder": {
+    "title": "بحث المطاعم والفنادق",
+    "subtitle": "اكتشف المؤسسات الأعلى تقييماً مع درجات فحص الصحة",
+    "searchPlaceholder": "ابحث باسم المطعم أو نوع الطعام...",
+    "type": "نوع المؤسسة",
+    "restaurant": "مطعم",
+    "hotel": "فندق",
+    "all": "جميع الأنواع",
+    "borough": "الحي",
+    "allBoroughs": "جميع الأحياء",
+    "results": "النتائج المعثور عليها",
+    "selectEstablishment": "حدد مؤسسة لعرض التفاصيل",
+    "healthScore": "درجة فحص الصحة",
+    "address": "العنوان",
+    "lastInspection": "آخر فحص",
+    "violations": "الانتهاكات الأخيرة",
+    "menu": "القوائم والأسعار",
+    "rating": "التقييم",
+    "reviews": "التقييمات",
+    "priceRange": "نطاق الأسعار",
+    "hours": "ساعات العمل",
+    "transport": "كيفية الوصول"
   }
 }
