--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
     "academy": "Academy",
     "dashboard": "Dashboard",
     "healthmap": "Health Map",
+    "finder": "Restaurant Finder",
     "home": "Home",
     "about": "About",
     "contact": "Contact"
@@ -34,7 +35,34 @@
     "assessments": "Assessments",
     "score": "Score",
     "passed": "Passed",
-    "failed": "Failed"
+    "failed": "Failed",
+    "course1Title": "Basic Food Hygiene",
+    "course1Desc": "Essential food safety practices",
+    "course2Title": "Advanced Sanitation",
+    "course2Desc": "Professional sanitation procedures",
+    "course3Title": "Allergen Management",
+    "course3Desc": "Handling food allergies safely",
+    "duration": "Duration",
+    "lessons": "Lessons",
+    "modules": "Modules",
+    "topicsLearned": "Topics You'll Learn",
+    "courseProgress": "Course Progress",
+    "reviewAgain": "Review Course",
+    "downloadCertificate": "Download Certificate",
+    "selectLesson": "Select a lesson to begin studying",
+    "markComplete": "Mark as Complete",
+    "markIncomplete": "Mark as Incomplete",
+    "quiz": "Quiz",
+    "questionProgress": "Question",
+    "questionsInQuiz": "questions in this quiz",
+    "takeQuiz": "Take Quiz",
+    "submitQuiz": "Submit Quiz",
+    "quizPassed": "Congratulations!",
+    "quizFailed": "Try Again",
+    "scoreMessage": "Your Score",
+    "lessonCompleted": "Lesson Completed Successfully",
+    "continueLesson": "Continue to Next Lesson",
+    "retryQuiz": "Retry Quiz"
   },
   "dashboard": {
     "title": "Smart Audit Dashboard",
@@ -71,7 +99,6 @@
     "details": "Restaurant Details",
     "phone": "Phone",
     "address": "Address",
-    "cuisine": "Cuisine",
     "lastInspection": "Last Inspection",
     "mapView": "Map View",
     "listView": "List View",
@@ -94,5 +121,28 @@
     "previous": "Previous",
     "logout": "Logout",
     "login": "Login"
+  },
+  "finder": {
+    "title": "Restaurant & Hotel Finder",
+    "subtitle": "Discover top-rated establishments with health inspection scores",
+    "searchPlaceholder": "Search by restaurant name or cuisine...",
+    "type": "Establishment Type",
+    "restaurant": "Restaurant",
+    "hotel": "Hotel",
+    "all": "All Types",
+    "borough": "Borough",
+    "allBoroughs": "All Boroughs",
+    "results": "results found",
+    "selectEstablishment": "Select an establishment to view details",
+    "healthScore": "Health Inspection Score",
+    "address": "Address",
+    "lastInspection": "Last Inspection",
+    "violations": "Recent Violations",
+    "menu": "Menu & Prices",
+    "rating": "Rating",
+    "reviews": "Reviews",
+    "priceRange": "Price Range",
+    "hours": "Hours of Operation",
+    "transport": "How to Get There"
   }
 }
