--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -13,6 +13,7 @@
     "academy": "Academia",
     "dashboard": "Panel de Control",
     "healthmap": "Mapa de Salud",
+    "finder": "Buscador de Restaurantes",
     "home": "Inicio",
     "about": "Acerca de",
     "contact": "Contacto"
@@ -34,7 +35,34 @@
     "assessments": "Evaluaciones",
     "score": "Calificación",
     "passed": "Aprobado",
-    "failed": "Reprobado"
+    "failed": "Reprobado",
+    "course1Title": "Higiene Alimentaria Básica",
+    "course1Desc": "Prácticas esenciales de seguridad alimentaria",
+    "course2Title": "Saneamiento Avanzado",
+    "course2Desc": "Procedimientos profesionales de saneamiento",
+    "course3Title": "Gestión de Alergenos",
+    "course3Desc": "Manejo seguro de alergias alimentarias",
+    "duration": "Duración",
+    "lessons": "Lecciones",
+    "modules": "Módulos",
+    "topicsLearned": "Temas que aprenderá",
+    "courseProgress": "Progreso del Curso",
+    "reviewAgain": "Revisar Curso",
+    "downloadCertificate": "Descargar Certificado",
+    "selectLesson": "Selecciona una lección para comenzar a estudiar",
+    "markComplete": "Marcar como Completado",
+    "markIncomplete": "Marcar como Incompleto",
+    "quiz": "Cuestionario",
+    "questionProgress": "Pregunta",
+    "questionsInQuiz": "preguntas en este cuestionario",
+    "takeQuiz": "Tomar Cuestionario",
+    "submitQuiz": "Enviar Cuestionario",
+    "quizPassed": "¡Felicitaciones!",
+    "quizFailed": "Intentar de Nuevo",
+    "scoreMessage": "Tu Puntuación",
+    "lessonCompleted": "Lección Completada con Éxito",
+    "continueLesson": "Continuar a la Siguiente Lección",
+    "retryQuiz": "Reintentar Cuestionario"
   },
   "dashboard": {
     "title": "Panel de Auditoría Inteligente",
@@ -71,7 +99,6 @@
     "details": "Detalles del Restaurante",
     "phone": "Teléfono",
     "address": "Dirección",
-    "cuisine": "Cocina",
     "lastInspection": "Última Inspección",
     "mapView": "Vista de Mapa",
     "listView": "Vista de Lista",
@@ -94,5 +121,28 @@
     "previous": "Anterior",
     "logout": "Cerrar Sesión",
     "login": "Iniciar Sesión"
+  },
+  "finder": {
+    "title": "Buscador de Restaurantes y Hoteles",
+    "subtitle": "Descubra los establecimientos mejor calificados con puntuaciones de inspección de salud",
+    "searchPlaceholder": "Buscar por nombre de restaurante o cocina...",
+    "type": "Tipo de Establecimiento",
+    "restaurant": "Restaurante",
+    "hotel": "Hotel",
+    "all": "Todos los Tipos",
+    "borough": "Distrito",
+    "allBoroughs": "Todos los Distritos",
+    "results": "resultados encontrados",
+    "selectEstablishment": "Seleccione un establecimiento para ver detalles",
+    "healthScore": "Puntuación de Inspección de Salud",
+    "address": "Dirección",
+    "lastInspection": "Última Inspección",
+    "violations": "Violaciones Recientes",
+    "menu": "Menú y Precios",
+    "rating": "Calificación",
+    "reviews": "Reseñas",
+    "priceRange": "Rango de Precios",
+    "hours": "Horario de Funcionamiento",
+    "transport": "Cómo Llegar"
   }
 }
