--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -13,6 +13,7 @@
     "academy": "Académie",
     "dashboard": "Tableau de Bord",
     "healthmap": "Carte Santé",
+    "finder": "Chercheur de Restaurants",
     "home": "Accueil",
     "about": "À Propos",
     "contact": "Contact"
@@ -34,7 +35,34 @@
     "assessments": "Évaluations",
     "score": "Score",
     "passed": "Réussi",
-    "failed": "Échoué"
+    "failed": "Échoué",
+    "course1Title": "Hygiène Alimentaire de Base",
+    "course1Desc": "Pratiques essentielles de sécurité alimentaire",
+    "course2Title": "Assainissement Avancé",
+    "course2Desc": "Procédures professionnelles d'assainissement",
+    "course3Title": "Gestion des Allergènes",
+    "course3Desc": "Manipulation sécuritaire des allergies alimentaires",
+    "duration": "Durée",
+    "lessons": "Leçons",
+    "modules": "Modules",
+    "topicsLearned": "Sujets que vous allez apprendre",
+    "courseProgress": "Progression du cours",
+    "reviewAgain": "Revoir le cours",
+    "downloadCertificate": "Télécharger le certificat",
+    "selectLesson": "Sélectionnez une leçon pour commencer l'étude",
+    "markComplete": "Marquer comme terminé",
+    "markIncomplete": "Marquer comme incomplet",
+    "quiz": "Quiz",
+    "questionProgress": "Question",
+    "questionsInQuiz": "questions dans ce quiz",
+    "takeQuiz": "Passer le Quiz",
+    "submitQuiz": "Soumettre le Quiz",
+    "quizPassed": "Félicitations!",
+    "quizFailed": "Réessayez",
+    "scoreMessage": "Votre Score",
+    "lessonCompleted": "Leçon Complétée avec Succès",
+    "continueLesson": "Continuer à la Leçon Suivante",
+    "retryQuiz": "Réessayer le Quiz"
   },
   "dashboard": {
     "title": "Tableau de Bord d'Audit Intelligent",
@@ -71,7 +99,6 @@
     "details": "Détails du Restaurant",
     "phone": "Téléphone",
     "address": "Adresse",
-    "cuisine": "Cuisine",
     "lastInspection": "Dernière Inspection",
     "mapView": "Vue Carte",
     "listView": "Vue Liste",
@@ -94,5 +121,28 @@
     "previous": "Précédent",
     "logout": "Déconnexion",
     "login": "Connexion"
+  },
+  "finder": {
+    "title": "Chercheur de Restaurants et Hôtels",
+    "subtitle": "Découvrez les établissements les mieux notés avec les scores d'inspection sanitaire",
+    "searchPlaceholder": "Rechercher par nom de restaurant ou cuisine...",
+    "type": "Type d'Établissement",
+    "restaurant": "Restaurant",
+    "hotel": "Hôtel",
+    "all": "Tous les Types",
+    "borough": "Arrondissement",
+    "allBoroughs": "Tous les Arrondissements",
+    "results": "résultats trouvés",
+    "selectEstablishment": "Sélectionnez un établissement pour voir les détails",
+    "healthScore": "Score d'Inspection Sanitaire",
+    "address": "Adresse",
+    "lastInspection": "Dernière Inspection",
+    "violations": "Violations Récentes",
+    "menu": "Menu et Prix",
+    "rating": "Évaluation",
+    "reviews": "Avis",
+    "priceRange": "Gamme de Prix",
+    "hours": "Horaires d'Ouverture",
+    "transport": "Comment se rendre sur place"
   }
 }
