--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -13,6 +13,7 @@
     "academy": "Academia",
     "dashboard": "Painel de Controle",
     "healthmap": "Mapa de Saúde",
+    "finder": "Buscador de Restaurantes",
     "home": "Início",
     "about": "Sobre",
     "contact": "Contato"
@@ -34,7 +35,34 @@
     "assessments": "Avaliações",
     "score": "Pontuação",
     "passed": "Aprovado",
-    "failed": "Reprovado"
+    "failed": "Reprovado",
+    "course1Title": "Higiene Alimentar Básica",
+    "course1Desc": "Práticas essenciais de segurança alimentar",
+    "course2Title": "Saneamento Avançado",
+    "course2Desc": "Procedimentos profissionais de saneamento",
+    "course3Title": "Gestão de Alérgenos",
+    "course3Desc": "Manipulação segura de alergias alimentares",
+    "duration": "Duração",
+    "lessons": "Lições",
+    "modules": "Módulos",
+    "topicsLearned": "Tópicos que você aprenderá",
+    "courseProgress": "Progresso do Curso",
+    "reviewAgain": "Revisar Curso",
+    "downloadCertificate": "Baixar Certificado",
+    "selectLesson": "Selecione uma lição para comecçar a estudar",
+    "markComplete": "Marcar como Concluído",
+    "markIncomplete": "Marcar como Incompleto",
+    "quiz": "Questionário",
+    "questionProgress": "Pergunta",
+    "questionsInQuiz": "perguntas neste questionário",
+    "takeQuiz": "Fazer Questionário",
+    "submitQuiz": "Enviar Questionário",
+    "quizPassed": "Parabéns!",
+    "quizFailed": "Tente Novamente",
+    "scoreMessage": "Sua Pontuação",
+    "lessonCompleted": "Lição Concluída com Sucesso",
+    "continueLesson": "Continuar para a Próxima Lição",
+    "retryQuiz": "Tentar Novamente o Questionário"
   },
   "dashboard": {
     "title": "Painel de Auditoria Inteligente",
@@ -71,7 +99,6 @@
     "details": "Detalhes do Restaurante",
     "phone": "Telefone",
     "address": "Endereço",
-    "cuisine": "Culinária",
     "lastInspection": "Última Inspeção",
     "mapView": "Visualização de Mapa",
     "listView": "Visualização de Lista",
@@ -93,6 +120,28 @@
     "next": "Próximo",
     "previous": "Anterior",
     "logout": "Sair",
-    "login": "Fazer Login"
+    "login": "Fazer Login"  },
+  "finder": {
+    "title": "Buscador de Restaurantes e Hotéis",
+    "subtitle": "Descubra os estabelecimentos mais bem avaliados com pontuações de inspeção de saúde",
+    "searchPlaceholder": "Procurar por nome de restaurante ou tipo de culinária...",
+    "type": "Tipo de Estabelecimento",
+    "restaurant": "Restaurante",
+    "hotel": "Hotel",
+    "all": "Todos os Tipos",
+    "borough": "Distrito",
+    "allBoroughs": "Todos os Distritos",
+    "results": "resultados encontrados",
+    "selectEstablishment": "Selecione um estabelecimento para ver detalhes",
+    "healthScore": "Pontuação de Inspeção de Saúde",
+    "address": "Endereço",
+    "lastInspection": "Última Inspeção",
+    "violations": "Violações Recentes",
+    "menu": "Cardápio e Preços",
+    "rating": "Avaliação",
+    "reviews": "Avaliações",
+    "priceRange": "Faixa de Preço",
+    "hours": "Horário de Funcionamento",
+    "transport": "Como Chegar"
   }
 }
