--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -13,6 +13,7 @@
     "academy": "学院",
     "dashboard": "仪表板",
     "healthmap": "卫生地图",
+    "finder": "餐厅酒店搜索",
     "home": "主页",
     "about": "关于",
     "contact": "联系"
@@ -34,7 +35,34 @@
     "assessments": "评估",
     "score": "分数",
     "passed": "通过",
-    "failed": "失败"
+    "failed": "失败",
+    "course1Title": "基础食品卫生",
+    "course1Desc": "基本食品安全实践",
+    "course2Title": "高级卫生",
+    "course2Desc": "专业卫生程序",
+    "course3Title": "过敏原管理",
+    "course3Desc": "安全处理食物过敏",
+    "duration": "抉上时间",
+    "lessons": "课程",
+    "modules": "模块",
+    "topicsLearned": "你会学到的主题",
+    "courseProgress": "课程进度",
+    "reviewAgain": "复习课程",
+    "downloadCertificate": "下载证书",
+    "selectLesson": "选择一个课程开始学习",
+    "markComplete": "标记为完成",
+    "markIncomplete": "标记为未完成",
+    "quiz": "测验",
+    "questionProgress": "问题",
+    "questionsInQuiz": "此测验中的问题",
+    "takeQuiz": "参加测验",
+    "submitQuiz": "提交测验",
+    "quizPassed": "祝贺!",
+    "quizFailed": "再试一次",
+    "scoreMessage": "你的分数",
+    "lessonCompleted": "课程成功完成",
+    "continueLesson": "继续下一课",
+    "retryQuiz": "重新尝试测验"
   },
   "dashboard": {
     "title": "智能审计仪表板",
@@ -71,7 +99,6 @@
     "details": "餐厅详情",
     "phone": "电话",
     "address": "地址",
-    "cuisine": "菜系",
     "lastInspection": "最后检查",
     "mapView": "地图视图",
     "listView": "列表视图",
@@ -93,6 +120,28 @@
     "next": "下一步",
     "previous": "上一步",
     "logout": "登出",
-    "login": "登录"
+    "login": "登录"  },
+  "finder": {
+    "title": "餐厅和酒店搜索",
+    "subtitle": "发现评分最高的餐厅和酒店，以及卫生检查分数",
+    "searchPlaceholder": "按餐厅名称或菜系搜索...",
+    "type": "establishment类型",
+    "restaurant": "餐厅",
+    "hotel": "酒店",
+    "all": "所有类型",
+    "borough": "区",
+    "allBoroughs": "所有区",
+    "results": "找到的结果",
+    "selectEstablishment": "选择餐厅或酒店查看详情",
+    "healthScore": "卫生检查分数",
+    "address": "地址",
+    "lastInspection": "最后检查",
+    "violations": "最近的违规",
+    "menu": "菜单和价格",
+    "rating": "评分",
+    "reviews": "评论",
+    "priceRange": "价格范围",
+    "hours": "营业时间",
+    "transport": "如何到达"
   }
 }
